--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "./node_modules/yarn/bin/yarn next"
+  },
   "dependencies": {
     "next": "^12.2.4",
     "nextra": "^1.1.0",
@@ -6,6 +9,7 @@
     "prism-react-renderer": "^1.3.5",
     "prismjs": "^1.28.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yarn": "^1.22.19"
   }
 }
